fix stretched dots in printed pdf (only in the print version) IRP-84

--- a/packages/route_widget/components/details/details.scss
+++ b/packages/route_widget/components/details/details.scss
@@ -220,6 +220,7 @@
       width: 48px;
       display: flex;
       justify-content: center;
+      align-items: center;
     }
     .details__car_step__content {
       display: flex;
